# multi-widget

./: .gitignore  .markdownlint-cli2.jsonc  .prettierrc  Cargo.toml  cog.toml  index.html  justfile  package-lock.json  package.json  readme.md  todo.html  todo.md
.issues/: 001--setup-issue-tracking.md  002--dobavit-neverthrow-sozdat-safefetch-s-tipizirovannymi-oshibkami.md  003--obernut-sushchestvuyushchiy-fetch-v-safefetch.md  004--vynesti-url-api-v-peremennuyu-okruzheniya-zamenit-khardkod.md  005--ruchnoy-test-server-frontend-dannye-zagruzhayutsya-oshibki.md  006--sozdat-sse-utility-modul-s-eventsource-i-reconnect.md  007--obrabotka-createactivity-activitystore-add.md  008--obrabotka-updateactivity-activitystore-update.md  009--obrabotka-deleteactivity-activitystore-remove.md  010--obrabotat-lagged-polnyy-re-fetch.md  011--ruchnoy-test-obnovit-aktivnost-cherez-curl-vidzhet-obnovlyaetsya-bez.md  012--dobavit-delete-route-handler-na-servere.md  013--broadcast-deleteactivity-cherez-sse.md  014--ruchnoy-test-curl-x-delete-vidzhet-ubiraet-stroku.md  015--ispol-zovat-db-generated-id-vmesto-zakhardkozhennogo.md  016--sozdat-kreyt-widget-cli-s-clap-i-reqwest.md  017--kornevaya-komanda-widget-s-clap.md  018--podkomanda-widget-todo-s-variantami-list-add-done-delete.md  019--http-klient-modul-dlya-zaprosov-k-serveru.md  020--widget-todo-list-tekstovyy-vyvod-id-title-status.md  021--widget-todo-add-tekst-post-na-server.md  022--widget-todo-done-n-patch-status.md  023--widget-todo-delete-n-delete.md  024--flag-json-dlya-vyvoda-v-json.md  025--dobavit-ratatui-crossterm-v-zavisimosti.md  026--tui-modul-initsializatsiya-runtime-struktura-app.md  027--render-spiska-s-vydeleniem-tekushchey-stroki.md  028--obrabotka-klaviatury-navigatsiya-done-add-delete-vykhod.md  029--integratsiya-tui-kak-podkomanda-widget-todo-tui.md  030--avtoobnovlenie-cherez-polling-ili-sse.md  031--dobavit-utoipa-v-server.md  032--annotirovat-tipy-derive-toschema.md  033--annotirovat-handlers-utoipa-path.md  (+31 more)
server/: Cargo.toml
server/src/: db.rs  main.rs  types.rs
shared/: Cargo.toml
shared/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: common.rs  error.rs  issues.rs  main.rs
xtask/src/issues/: lint_md.rs  parse_frontmatter_json.rs  validate_rules.rs
(+45 files in other folders)
