[workspace]
members = ["server","shared"]
resolver = "2"

[workspace.dependencies]
serde = "1.0.228"
specta-serde = "0.0.12"
specta-typescript = "0.0.12"
axum = "0.8.9"
specta = "2.0.0-rc.25"
tokio = "1.52.3"
futures-util = "0.3.32"
tokio-stream = "0.1.18"
sqlx = "0.9.0"
shared = { path = "shared" }
chrono = "0.4.45"
serde_json = "1.0.150"
strum = "0.28.0"
dotenv = "0.15.0"
tower-http = "0.7.0"
