[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["chrono", "derive"] }
specta-serde = { workspace = true }
specta-typescript = { workspace = true }
sqlx = { workspace = true, features = ["chrono"] }
strum = { workspace = true, features = ["derive"] }
